added excel utils for doctor module